fix: disable pull-to-refresh on mobile

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -6,6 +6,7 @@
 html, body {
   width: 100%;
   min-height: 100dvh;
+  overscroll-behavior-y: contain;
 }
 
 body {
